# Baum-Welch-Algorithm

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  zbpack.json
examples/: weather_example.py
examples/output/: state_diagram
hmm_core/: __init__.py
hmm_core/inference/: __init__.py
hmm_core/inference/components/: beta.py
hmm_core/initialization/: __init__.py
hmm_core/model/: hmm.py
hmm_core/optimization/: baum_welch_step.py  convergence.py
hmm_core/training/: trainer.py  training_result.py
hmm_project/: DEPLOYMENT.md  README.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  wsgi.py  zeabur.json
hmm_project/examples/: weather_example.py
hmm_project/examples/output/: state_diagram
hmm_project/hmm_baum_welch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hmm_project/hmm_core/inference/: forward_backward.py  responsibilities.py  scaling.py
hmm_project/hmm_service/: __init__.py  app.py
hmm_project/hmm_visualization/: __init__.py  state_diagram.py  training_plots.py
hmm_project/state_transition_diagrams/: README.md  config.py
hmm_project/tests/: audit_hmm.py  test_baum_welch.py  test_forward_backward.py  test_training.py
hmm_service/api/: routes.py
hmm_service/services/: hmm_runner.py
hmm_service/static/: style.css
hmm_service/templates/: index.html
hmm_visualization/: heatmaps.py  parameter_trajectory.py  state_diagram.py  styles.py
state_transition_diagrams/: README.md  pyproject.toml
tests/: test_normalization.py
(+28 files in other folders)
