[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hmm-baum-welch"
version = "1.0.0"
description = "Production-grade Hidden Markov Model engine with Baum-Welch (EM) training"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "HMM Engine Contributors"},
]
keywords = ["hmm", "baum-welch", "em", "hidden-markov-model", "probabilistic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "flask>=3.0",
    "flask-socketio>=5.3",
    "eventlet>=0.35",
    "graphviz>=0.20",
    "matplotlib>=3.7",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
include = ["hmm_core*", "hmm_visualization*", "hmm_service*", "state_transition_diagrams*"]

[tool.setuptools.package-data]
state_transition_diagrams = ["static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
